fix spacing

--- a/src/components/Write/Write.module.scss
+++ b/src/components/Write/Write.module.scss
@@ -69,10 +69,6 @@
   margin-bottom: spacing(2);
   padding: spacing(1) spacing(2);
 
-  &:nth-last-child(2) {
-    margin-bottom: spacing(1);
-  }
-
   &:last-child {
     margin-bottom: 0;
   }
@@ -92,4 +88,8 @@
 
 .load-more,.no-results {
   text-align: center;
+}
+
+.load-more {
+  margin-top: -#{spacing(1)};
 }
